@@ -624,15 +624,17 @@ class LengowExport
         } else {
             $join = '';
         }
-        if (_PS_VERSION_ < '1.5') {
-            $where = ' WHERE p.active = 1 ';
-        } else {
-            $where = ' WHERE ps.active = 1 ';
+        if (!$this->inactive) {
+            if (_PS_VERSION_ < '1.5') {
+                $where = ' WHERE p.active = 1 ';
+            } else {
+                $where = ' WHERE ps.active = 1 ';
+            }
         }
         $query = ' SELECT SUM(total) as total FROM (';
         $query .= ' ( SELECT COUNT(*) as total';
         $query .= ' FROM ' . _DB_PREFIX_ . 'product p ' . $join . ' ' . $where . ')';
-        $query .= ' UNION ';
+        $query .= ' UNION ALL ';
         $query .= ' ( SELECT COUNT(*) as total';
         $query .= ' FROM ' . _DB_PREFIX_ . 'product p';
         $query .= ' INNER JOIN ' . _DB_PREFIX_ . 'product_attribute pa ON (pa.id_product = p.id_product)';
@@ -656,7 +658,7 @@ class LengowExport
         if ($this->variation) {
             $query = ' SELECT SUM(total) as total FROM ( ( ';
             $query .= 'SELECT COUNT(*) as total ' . $this->buildTotalQuery();
-            $query .= ' ) UNION ( ';
+            $query .= ' ) UNION ALL ( ';
             $query .= 'SELECT COUNT(*) as total ' . $this->buildTotalQuery(true);
             $query .= ' ) ) as tmp';
         } else {
@@ -738,7 +740,7 @@ class LengowExport
         if ($this->variation) {
             $query = ' SELECT * FROM ( ( ';
             $query .= 'SELECT p.id_product, \'0\' as id_product_attribute ' . $this->buildTotalQuery();
-            $query .= ' ) UNION ( ';
+            $query .= ' ) UNION ALL ( ';
             $query .= 'SELECT p.id_product, pa.id_product_attribute ' . $this->buildTotalQuery(true);
             $query .= ' ) ) as tmp ORDER BY id_product, id_product_attribute';
         } else {
